--- a/src/components/Project/projectStyles.css
+++ b/src/components/Project/projectStyles.css
@@ -1,8 +1,9 @@
 .project {
-  min-height: 50vh;
-  margin: auto;
-  max-width: 1000px;
-  padding-top: 400px;
+  display: flex;
+  min-height: 70vh; /* Reduced height to allow footer visibility */
+  margin: 0 auto; /* Center horizontally */
+  max-width: 1000px; /* Limit the width */
+  padding-top: 50px; /* Reduced padding */
 }
 
 .project-content {
